--- a/src/index.css
+++ b/src/index.css
@@ -1,91 +1,56 @@
-@import "tailwindcss" ;
+@import "tailwindcss";
 @plugin "daisyui";
+* {
+  box-sizing: border-box;
+}
+#root {
+  font-family: "Inter", sans-serif;
+}
 
-
-
-/* @theme {
-  --color-twitter-blue: #1DA1F2;
+@theme {
+  --breakpoint-mn: 360px;
   --breakpoint-sm: 480px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 976px;
-} */
+  --breakpoint-xl: 1200px;
+  --breakpoint-2xl: 1440px;
+  --font-inter: "Inter", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+}
 
-@layer components{
-  .card{
+@layer components {
+  .card {
     @apply m-10 text-blue-600 border-amber-700 bg-white border-2;
   }
 }
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 @media (prefers-color-scheme: light) {
+  @theme {
+    --color-surface: #f9fafb;
+    --color-background: #fff;
+    --color-primary1: #1e1e1e;
+    --color-secondary2: #4b5563;
+    --color-accent: #ff0000;
+    --color-border: #e5e7eb;
+    --color-hover: rgba(105, 105, 105, 0.3);
+    --color-hover2: rgba(155, 155, 155, 0.3);
+  }
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #1e1e1e;
+    background-color: var(--color-background);
   }
-
-  a:hover {
-    color: #747bff;
+}
+@media (prefers-color-scheme: dark) {
+  @theme {
+    --color-surface: #181818;
+    --color-background: #0f0f0f;
+    --color-primary: #ffffff;
+    --color-secondary: #aaaaaa;
+    --color-accent: #ff4b4b;
+    --color-border: #303030;
+    --color-hover: rgba(105, 105, 105, 0.3);
   }
-
-  button {
-    background-color: #f9f9f9;
+  :root {
+    background-color: var(--color-background);
   }
 }
