--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,16 @@
 }
 
 @media (prefers-color-scheme: light) {
+  /* @theme {
+    --color-surface: #f9fafb;
+    --color-background: #fff;
+    --color-primary1: #1e1e1e;
+    --color-secondary2: #4b5563;
+    --color-accent: #ff0000;
+    --color-border: #e5e7eb;
+    --color-hover: rgba(105, 105, 105, 0.3);
+    --color-hover2: rgba(155, 155, 155, 0.3);
+  } */
   @theme {
     --color-surface: #f9fafb;
     --color-background: #fff;
