--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 #root {
   font-family: "Inter", sans-serif;
 }
+body{
+  background: #0f0f0fe9;
+}
 
 @theme {
   --breakpoint-mn: 360px;
@@ -37,14 +40,13 @@
     --color-hover2: rgba(155, 155, 155, 0.3);
   } */
   @theme {
-    --color-surface: #f9fafb;
-    --color-background: #fff;
-    --color-primary1: #1e1e1e;
-    --color-secondary2: #4b5563;
-    --color-accent: #ff0000;
-    --color-border: #e5e7eb;
-    --color-hover: rgba(105, 105, 105, 0.3);
-    --color-hover2: rgba(155, 155, 155, 0.3);
+    --color-surface: #181818;
+    --color-background: #0f0f0fe9;
+    --color-primary1: #f1f1f1;
+    --color-secondary2: #aaaaaa;
+    --color-accent: #ff4b4b;
+    --color-border: #303030;
+    --color-hover: #272727;
   }
   :root {
     color: #1e1e1e;
